Fixed header and hero layout issues. Added "About Us" section start

--- a/styles.css
+++ b/styles.css
@@ -25,13 +25,28 @@
 body {
   font-family: "Dubai", sans-serif;
   color: black;
-  max-width: 1366px;
+  width: 100%;
+  background-color: #e6e6e6;
+}
+
+.wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .body {
   position: relative;
   z-index: 1;
   top: 10vh;
+  max-width: 1366px;
 }
 
 /* Expanded header logo styling */
@@ -74,18 +89,6 @@ nav {
   height: 10vh;
   font-size: 1.5rem;
   z-index: 100;
-}
-
-.nav-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 .nav-links,
@@ -138,7 +141,7 @@ ul li {
   transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   body {
     overflow-x: hidden;
   }
@@ -239,7 +242,7 @@ ul li {
 
 .hero {
   width: 100%;
-  height: 90vh;
+  height: auto;
 }
 
 .hero-images {
@@ -247,28 +250,32 @@ ul li {
 }
 
 .hero-image-lrg {
-  max-width: 50%;
+  display: block;
+  max-width: 100%;
   height: auto;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
 .hero-image-sml {
+  display: block;
   max-width: 100%;
   height: auto;
 }
 
 .default-hero-img {
+  display: block;
   max-width: 100%;
 }
 
 /* Section headings styling */
 .sectionHeading {
   font-family: "Day Roman", serif;
-  margin: 10px;
+  padding: 10px;
 }
 
 .about {
+  background-color: white;
   position: relative;
 }
 
@@ -301,7 +308,7 @@ ul li {
 
 .parallax {
   position: relative;
-  height: 100vh;
+  height: 40vh;
   width: 100%;
   background-attachment: fixed;
   background-position: center;
